--- a/home.html
+++ b/home.html
@@ -32,10 +32,10 @@
         <br><br><br><br><br><br><br><br><br> <!--不這樣會疊圖..why  -->
         <div id="nav">
             <ul>
-                <li class="nav1"><a href="#">Home</a></li>
-                <li class="nav1"><a href="#">topic</a></li>
-                <li class="nav1"><a href="#">dedication</a></li>
-                <li class="nav1"><a href="#">Suggestions</a></li>
+                <li class="nav1"><a href="https://crackdile07.github.io/bse/home.html">Home</a></li>
+                <li class="nav1"><a href="https://crackdile07.github.io/bse/topic.html">topic</a></li>
+                <li class="nav1"><a href="https://crackdile07.github.io/bse/dedication.html">dedication</a></li>
+                <li class="nav1"><a href="https://crackdile07.github.io/bse/suggestion.html">Suggestions</a></li>
                 <li class="nav1"><a href="#">analysis</a></li>
             </ul> 
         </div>
