--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
                 <li class="nav1"><a href="https://crackdile07.github.io/bse/topic.html">topic</a></li>
                 <li class="nav1"><a href="https://crackdile07.github.io/bse/dedication.html">dedication</a></li>
                 <li class="nav1"><a href="https://crackdile07.github.io/bse/suggestion.html">Suggestions</a></li>
-                <li class="nav1"><a href="#">analysis</a></li>
+                <li class="nav1"><a href="https://crackdile07.github.io/bse/analysis.html">analysis</a></li>
             </ul> 
         </div>
     </header>
