--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
     <header>
         <div id="banner" style="width:3000px;">
             <p style="padding: 5px 5px 5px 30px">
-                <a href="#">
+                <a href="https://www.bse.ntu.edu.tw/">
                     <img src="./pic/logo-text.jpg" alt="" width="350px">
                 </a>
             </p>
@@ -41,7 +41,10 @@
         </div>
     </header>
     <div id="content" style='margin-top: 100px;padding-left: 100px;float:left;width:40;'>
-        <h2>敬請期待</h2>
+
+        <a id="top">
+            <h2>敬請期待</h2>
+        </a>
 
         <iframe id="ytplayer" type="text/html" width="700" height="500"
         src="https://www.youtube.com/embed/f3ESZSrKvkI?autoplay=1&origin=http://example.com"
@@ -93,6 +96,9 @@
     }
     </script>
 
+    <div class="goback">
+        <a href="#top">回頁首</a>
+    </div>
 
    
 </body>
